[project]
name = "EWS-JFinTEB"
version = "0.1.0"
description = ""
authors = [
    {name = "Masahiro Suzuki"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">3.10,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "datasets (>=3.6.0,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
